[gd_scene load_steps=3 format=3 uid="uid://c1pfq4v5uphny"]

[ext_resource type="Script" uid="uid://dy5i66gpun1d7" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://dyr2fwxox7fpm" path="res://assets/crewlogo.webp" id="2_fu7sn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7vrkn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_fu7sn")

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -68.0
offset_right = 50.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="PlayButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Play"

[node name="InstructionsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Instructions"

[node name="ExitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Exit"
